--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # Smart-Sync Concierge - Dependencias
 
-# Django Core
-Django==6.0.1
+# Django Core (Updated for Python 3.9 compatibility)
+Django==4.2.27
 djangorestframework==3.15.2
 django-cors-headers==4.6.0
 
