--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,10 @@ Django==4.2.27
 djangorestframework==3.15.2
 django-cors-headers==4.6.0
 
+# API Documentation
+drf-spectacular==0.27.2
+drf-yasg==1.21.8
+
 # PostgreSQL & Database
 psycopg2-binary==2.9.9
 dj-database-url==2.2.0
