--- a/data/appointments.json
+++ b/data/appointments.json
@@ -1,8 +1,8 @@
 {
   "metadata": {
     "version": "1.0.0",
-    "last_updated": "2026-01-30T12:00:00",
-    "total_appointments": 3,
+    "last_updated": "2026-02-10T21:01:37.960211",
+    "total_appointments": 4,
     "description": "Storage for appointment data in MVP (v0.1.0)"
   },
   "appointments": [
@@ -89,6 +89,21 @@
         "cliente": "Consulta dermatológica",
         "interna": "Revisión de lesiones"
       }
+    },
+    {
+      "contacto_id": "dr_juan_perez",
+      "contacto_nombre": "Pérez",
+      "fecha": "2026-02-11",
+      "hora_inicio": "10:00",
+      "hora_fin": "11:00",
+      "ubicacion_id": null,
+      "servicio_id": null,
+      "status": "confirmed",
+      "created_via_agent": true,
+      "trace_id": "trace_20260210_150137_d9635cd5",
+      "id": "apt_20260211_9835a9b8",
+      "created_at": "2026-02-10T21:01:37.960207",
+      "updated_at": "2026-02-10T21:01:37.960209"
     }
   ]
 }
